* Users: notify admins when user has validated his account (TrivialDev)
* Allow project to disable the Project Activity (Alcatel-Lucent)
* User: account ssh key management: rewrite backend, add more informations such as
        fingerprint, deploy flag, easy delete (TrivialDev)
* Docman: Directory monitoring (TrivialDev)
* Activity: New Directory appears now in activity (TrivialDev)

Plugins:
* headermenu: new plugin to add links in login/logout menu link (TrivialDev)
* scmgit: add browsing capability for user personal repository (TrivialDev)
* scmgit: basic activity support (TrivialDev).
* scmhg: merge patch from Denise Patzker: add http support, online browse, stats (TrivialDev)
* webanalytics: new plugin to add support for piwik or google analytics tool (TrivialDev)
* scmhook: Support added for pre-revprop-changehooks to change properties (Alcatel-Lucent)
* scmhook: Add commitEmail support for scmhg plugin (TrivialDev)

FusionForge-5.2:
* Docman: inject zip as a tree (Capgemini)
* Widget: New User Widget: Last 5 documents published in my project (Capgemini)
* Docman: mass action (Capgemini)
* New Message plugin to display global messages like planned upgrade or outage
  (Alcatel-Lucent).
* Docman: complete rewritten of trash and pending view (Capgemini)
* New Scmhook: complete library to handle hooks for any scm available in
  fusionforge. Currently supporting post-commit and pre-commit hook.
  scmsvn pre-commit and post-commit library is provided (Capgemini)
* New Widget: scmgit personal URL of cloned repositories. Currently just
  a list of URLs of your personal repository cloned from project you
   belong. (Capgemini)
* Docman: interaction with the projects-hierarchy plugin to enable hierarchical
  browsing. (Capgemini)
* Admin: User add membership to multiples projects in one shot (Capgemini)
* New MoinMoinWiki plugin (AdaCore)
* Trackers: New view to display roadmaps view for trackers (Alcatel-Lucent)